# psyarxivdb

./: .env.example  .gitignore  CHANGELOG.md  Makefile  PLAN_ROR_AFFILIATION_ENRICHMENT.md  README.md  dump-psyarxiv.sh  pyproject.toml  requirements.txt  robots.txt
datasette/: metadata.yml
osf/: __init__.py  config.py  database.py  entities.py  harvester.py  ingestor.py  optimizer.py  optimizer_ui.py  tracker.py
scripts/: build_ui_table.py  harvest.py  ingest.py  optimize.py
tools/: daily_osf_update.sh  fix_gaps.py  fix_tracker.py  fix_version_flags.py  refresh_dashboard_summaries.py  reset_db.py  reset_ingestion.py  show_status.py
