[project]
name = "psyarxivdb"
version = "0.1.0"
description = "A tool to harvest PsyArXiv preprint data and serve it with Datasette."
authors = [
    {name = "Matti Vuorre", email = "mjvuorre@uvt.nl"}
]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta" 