[project]
name = "psyarxivdb"
version = "0.1.0"
description = "A tool to harvest PsyArXiv preprint data and serve it with Datasette."
authors = [
    {name = "Matti Vuorre", email = "mjvuorre@uvt.nl"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles==24.1.0",
    "anyio==4.9.0",
    "asgi-csrf==0.11",
    "asgi-gzip==0.2",
    "asgiref==3.8.1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "click-default-group==1.2.4",
    "datasette==0.65.1",
    "datasette-copyable==0.3.2",
    "datasette-external-links-new-tabs==0.1",
    "datasette-gzip==0.2",
    "datasette-vega==0.6.2",
    "duckdb==1.2.1",
    "flexcache==0.3",
    "flexparser==0.4",
    "gitingest==0.1.4",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "hupper==1.12.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "janus==2.0.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "mergedeep==1.3.4",
    "platformdirs==4.3.7",
    "pluggy==1.5.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlite-fts4==1.0.3",
    "sqlite-utils==3.38",
    "tabulate==0.9.0",
    "tiktoken==0.9.0",
    "tomli==2.2.1",
    "tqdm==4.67.1",
    "typing-extensions==4.13.1",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["osf"] 