[project]
name = "psyarxivdb"
version = "0.1.1"
description = "Harvest PsyArXiv preprint data and serve it with Datasette."
authors = [
    {name = "Matti Vuorre", email = "mjvuorre@uvt.nl"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles==25.1.0",
    "anyio==4.12.1",
    "asgi-csrf==0.11",
    "asgi-gzip==0.2",
    "asgiref==3.11.1",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.6",
    "click==8.1.8",
    "click-default-group==1.2.4",
    "datasette==0.65.2",
    "datasette-copyable==0.3.2",
    "datasette-cors==1.0.1",
    "datasette-external-links-new-tabs==0.1",
    "datasette-gzip==0.2",
    "datasette-vega==0.6.2",
    "duckdb==1.4.4",
    "flexcache==0.3",
    "flexparser==0.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "hupper==1.12.1",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "janus==2.0.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "mergedeep==1.3.4",
    "platformdirs==4.4.0",
    "pluggy==1.6.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.3",
    "regex==2026.1.15",
    "requests==2.32.5",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlite-fts4==1.0.3",
    "sqlite-utils==3.38",
    "tabulate==0.9.0",
    "tomli==2.4.1",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "uvicorn==0.39.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["osf"]
